--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 spring:
   datasource:
-    url: jdbc:oracle:thin:@localhost:1521/XE
+    url: jdbc:oracle:thin:@host.docker.internal:1521/XE
     username: system
     password: java1234
     driver-class-name: oracle.jdbc.OracleDriver
   jpa:
     database-platform: org.hibernate.dialect.Oracle12cDialect
     hibernate:
-      ddl-auto: update  # 개발 시에는 update, 배포 시에는 validate
+      ddl-auto: update
     show-sql: true
   logging:
     level:
-      org.hibernate.SQL: debug
+      org.hibernate.SQL: DEBUG
