--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,12 @@
 spring:
   datasource:
-    url: jdbc:oracle:thin:@host.docker.internal:1521/XE
-    username: system
+    url: jdbc:oracle:thin:@localhost:1521:XE
+    username: dev_user
     password: java1234
     driver-class-name: oracle.jdbc.OracleDriver
   jpa:
-    database-platform: org.hibernate.dialect.Oracle12cDialect
+    database-platform: org.hibernate.dialect.OracleDialect  # 최신 버전 사용
     hibernate:
       ddl-auto: update
     show-sql: true
-  logging:
-    level:
-      org.hibernate.SQL: DEBUG
+
